fix compilation after downgrading to jdk 8